# pear-autoreply

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Dockerfile.caddy  FALLBACK_TEMPLATE.md  HARNESS_BUILD_BRIEF.md  Makefile  PLAN.md  README.md  TESTING_HARNESS_PLAN.md  TODO.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
fixtures/: README.md
fixtures/anonymized/streeteasy/: question__108-05-101st-avenue-3__249.eml  question__2266-pacific-street-1b__6.eml  question__65-saint-mark-s-avenue-2b__440.eml  tour__1186-bushwick-avenue-3f__89.eml  tour__1186-bushwick-avenue-3f__99.eml  tour__267-clifton-place-1a__0.eml  tour__267-clifton-place-1a__22.eml  tour__267-clifton-place-1a__34.eml  tour__65-saint-mark-s-avenue-2b__64.eml  tour__65-saint-mark-s-avenue-2b__9.eml
fixtures/anonymized/zillow/: lead__112-30-rockaway-beach-blvd-2a__38642.eml  lead__138-montague-st-11__3788.eml  lead__1404-e-93rd-st-2f__17596.eml  lead__1431-lincoln-pl-4d__23190.eml  lead__170-prospect-pl-3b__1.eml  lead__1926-madison-st-2l__35098.eml  (+4 more)
legacy/: README.md  zapier_supabase_post.py
scripts/: dump_airtable_schema.py  generate_airtable_schema.py
src/autoreplies/: __init__.py  config.py  deps.py  logging_config.py  main.py
tests/: conftest.py  test_address.py  test_admin_auth.py  test_airtable.py  test_coerce.py  test_distinctness.py  test_health.py  test_pipeline_strategies.py  test_smoke.py
tests/harness/: test_diff.py  test_integration.py  test_pipeline.py  test_poller.py  test_state.py  test_stats.py
tests/parsers/: conftest.py  test_dispatch.py  test_streeteasy.py  test_zillow.py
tests/pipeline/: test_process_lead.py  test_reply_route.py
tests/services/: test_gmail.py  test_llm.py  test_templates.py
(+29 files in other folders)
