[project]
name = "pear-autoreplies"
version = "0.1.0"
description = "Pear NYC rental-platform lead autoreply pipeline (StreetEasy + Zillow → Airtable → Supabase + Slack)"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Pear NYC" }]

dependencies = [
  # Web
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",

  # Queue
  "rq>=1.16",
  "redis>=5.0",

  # External services
  "google-auth>=2.35",
  "google-api-python-client>=2.149",
  "pyairtable>=3.0",
  "supabase>=2.9",
  "slack-sdk>=3.33",
  "anthropic>=0.39",

  # Parsing / matching
  "beautifulsoup4>=4.12",
  "lxml>=5.3",
  "rapidfuzz>=3.10",

  # HTTP
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",            # for FastAPI TestClient
  "ruff>=0.7",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoreplies"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E", "F", "W",   # pycodestyle + pyflakes
  "I",             # isort
  "B",             # bugbear
  "UP",            # pyupgrade
  "SIM",           # simplify
  "RUF",           # ruff-specific
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.12"
strict_optional = true
warn_unused_ignores = true
ignore_missing_imports = true
files = ["src"]
